feat: 添加首页开屏页面第一时间显示默认图, 不再留白

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,6 +56,7 @@
         <item name="colorAccent">@color/colorTheme</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowAnimationStyle">@style/default_animation_up</item>
+        <item name="android:windowBackground">@drawable/img_transition_default</item>
     </style>
 
 
